--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin project 1 - Recipes</title>
 </head>
 <body>
     <h1>Odin recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/applePie.html">Apple Pie</a></li>
+        <li><a href="recipes/brownies.html">Brownies</a></li>
+    </ul>
+    
 </body>
 </html>
